Project

General

Profile

Actions

Bug #16923

closed

librbd/ExclusiveLock.cc: 197: FAILED assert(m_watch_handle != 0)

Added by Jason Dillaman over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph version 10.2.0 (3a9fba20ec743699b69bd0181dd6c54dc01c64b9)
1: (()+0x24c4bb) [0x7fdebcbde4bb]
2: (()+0x7cf54) [0x7fdebca0ef54]
3: (()+0x7dadb) [0x7fdebca0fadb]
4: (()+0x7e827) [0x7fdebca10827]
5: (()+0x65d46) [0x7fdebc9f7d46]
6: (()+0x66218) [0x7fdebc9f8218]
7: (rbd_aio_write()+0x29) [0x7fdebc9ec629]
8: (()+0xde816) [0x7fded0108816]
9: (()+0xde910) [0x7fded0108910]
10: (()+0xb69b0) [0x7fded00e09b0]
11: (()+0xbbc44) [0x7fded00e5c44]
12: (()+0xbbc44) [0x7fded00e5c44]
13: (()+0xbc8fc) [0x7fded00e68fc]
14: (()+0xfc36a) [0x7fded012636a]
15: (()+0x49800) [0x7fdeb84ac800]

The current assumption is that this was a race with a transient hiccup in the image header's watch registration. The aio_write resulted in an attempt to (re-)acquire the exclusive lock and the assertion test for ensuring a valid watch header failed (since the watch was most likely being re-established in the background).


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16950: jewel: librbd/ExclusiveLock.cc: 197: FAILED assert(m_watch_handle != 0)ResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman over 7 years ago

  • Description updated (diff)
Actions #3

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #16950: jewel: librbd/ExclusiveLock.cc: 197: FAILED assert(m_watch_handle != 0) added
Actions #5

Updated by Jason Dillaman over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF